--- a/index.html
+++ b/index.html
@@ -27,13 +27,21 @@
 				<form method="GET" name="google" target="_blank" action="https://google.com/search">
 					<input type="text" placeholder="Search..." name="q" />
 				</form>
-		</div>
-		<!-- Sidebar footer -->
-		<div class="table-tr" id="table-footer">
-			<ul id="date"></ul>
-		</div>
+			</div>
+			<!-- Sidebar footer -->
+			<div class="table-tr" id="table-footer">
+				<ul id="date"></ul>
+			</div>
+    	</div>
+	</div>
+</div>
 
-    </div>
+<!-- Footer -->
+<div id="footer">
+	<!-- Comments -->
+	<div id="comments">
+
+	</div>
 </div>
 
 </body>
